mem_dbg/tests/snapshots/test_ref_dedup_insta__ref_struct_with_follow@x86.snap
---
source: mem_dbg/tests/test_ref_dedup_insta.rs
expression: output
---
71 B 100.00% ⏺: test_ref_dedup_insta::RefToStruct<'_>
34 B  47.89% ├╴first: &test_ref_dedup_insta::Inner @ 0x[ADDR_1]
30 B  42.25% │ ╰╴: test_ref_dedup_insta::Inner
 4 B   5.63% │   ├╴x: i32
 8 B  11.27% │   ├╴y: i64
18 B  25.35% │   ╰╴name: alloc::string::String
 4 B   5.63% ├╴second: &test_ref_dedup_insta::Inner → 0x[ADDR_1]
33 B  46.48% ╰╴different: &test_ref_dedup_insta::Inner @ 0x[ADDR_2]
29 B  40.85%   ╰╴: test_ref_dedup_insta::Inner
 4 B   5.63%     ├╴x: i32
 8 B  11.27%     ├╴y: i64
17 B  23.94%     ╰╴name: alloc::string::String
