mem_dbg/tests/snapshots/test_ref_dedup_insta__ref_struct_without_follow@aarch64.snap
---
source: mem_dbg/tests/test_ref_dedup_insta.rs
expression: output
---
24 B 100.00% ⏺: test_ref_dedup_insta::RefToStruct<'_>
 8 B  33.33% ├╴first: &test_ref_dedup_insta::Inner
 8 B  33.33% ├╴second: &test_ref_dedup_insta::Inner
 8 B  33.33% ╰╴different: &test_ref_dedup_insta::Inner
