mem_dbg/tests/snapshots/test_ref_dedup_insta__ref_with_follow_refs@x86_64.snap
---
source: mem_dbg/tests/test_ref_dedup_insta.rs
expression: output
---
52 B 100.00% ⏺: test_ref_dedup_insta::SharedRef<'_>
20 B  38.46% ├╴name: &str @ 0x[ADDR_1]
 4 B   7.69% │ ╰╴: str
12 B  23.08% ├╴first: &i32 @ 0x[ADDR_2]
 4 B   7.69% │ ╰╴: i32
 8 B  15.38% ├╴second: &i32 → 0x[ADDR_2]
12 B  23.08% ╰╴different: &i32 @ 0x[ADDR_3]
 4 B   7.69%   ╰╴: i32
